--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,6 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 100px; 
-
-
 }
 
 .container {
@@ -30,7 +28,7 @@ body {
   margin: 0 auto;
 }
 
-/*GOOD*/
+/* Sidebar styles */
 	.sidebar {
 	  position: relative;
 	  top: 150px;
@@ -39,20 +37,15 @@ body {
 	  width: 200px;
 	  height: auto;
 	  background-color: white;
-	  padding: 40px 20px;
+	  padding: 40px 20px;	
 	  z-index: 1;
 	  display: flex;
 	  flex-direction: column;
 	  justify-content: center;
 	  /*border-right: 1px solid #ccc;*/
 	  /*flex-shrink: 0;*/
-	  
-	  
-	 
-	  
 	  /*align-items: flex-start;*/
 	}
-
 	.sidebar nav a {
 	  display: block;
 	  margin: 20px 0;
@@ -62,11 +55,9 @@ body {
 	  font-size: 1.2em;
 	  position: relative;
 	}
-
 	.sidebar nav a:hover {
 	  color: darkgreen;
 	}
-
 	.sidebar nav a::after {
 	  content: '';
 	  display: block;
@@ -75,19 +66,16 @@ body {
 	  background: green;
 	  transition: width 0.3s;
 	  position: absolute;
-	  bottom: -5px;
+	  bottom: -4px;
 	  left: 0;
 	}
-
 	.sidebar nav a:hover::after {
 	  width: 100%;
 	}
-
 	.sidebar nav .active {
 	  color: darkgreen;
 	}
-
-.sidebar-center {
+.sidebar-home {
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -137,14 +125,9 @@ body {
 	left: 0;
 	z-index: 1000;
 	max-width: none;
-	
-	
 	/*border-bottom: 1px solid #ccc;*/
-	
-	
 	/*top: 0;
 	z-index: 1;*/ 
-
 	/*border: 1px dashed red;*/
 }
 	
@@ -158,6 +141,7 @@ body {
 	font-style: italic;
 }
 
+/*file system styles*/
 .scrollable-filesys {
 	flex: 1;
 	white-space: pre;
@@ -171,12 +155,12 @@ body {
 	font-family: monospace;
 	padding: 20px;
 }
-
 pre {
 	tab-size: 2;
 	-moz-tab-size: 2; /* for Firefox support */
 }
 
+/* About section styles */
 .about-section {
   display: flex;
   justify-content: center;
@@ -189,7 +173,6 @@ pre {
   padding: 150px 20px;
   border-radius: 12px;
 }
-
 .about-textbox {
   flex: 1;
   background: white;
@@ -200,7 +183,6 @@ pre {
   box-shadow: 0 2px 8px rgba(0,0,0,0.04);
   text-align: left;
 }
-
 .about-photo img {
   width: 180px;
   height: 180px;
