Changed font on about

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
 	align-items: flex-start;
 	
 	font-size: 1em;
-	font-family: monospace;
+	font-family: sans-serif;
 	padding: 20px;
 }
 
