Fixed Archive in sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
 	/*margin-bottom: 30px;*/
 	margin: 0 auto;
 	display: inline-block;
-	color: black;
+	color: darkgreen;
 	font-size: 2em;
 	font-weight: bold;
 	font-style: italic;
