--- a/css/styles.css
+++ b/css/styles.css
@@ -192,3 +192,17 @@ img {
 	display: block;
 	margin: 0 auto;
 }
+
+/*Bullet points*/
+ul {
+	list-style-type: disc;
+	margin-left: 20px;
+	margin-bottom: 1rem;
+}
+
+ul a {
+	text-decoration: none;
+	font-weight: bold;
+	color: darkgreen;
+
+}
